# py4me

./: README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tox.ini
.github/workflows/: sonarcloud.yml
OLD_VERSION/: py4me.py  utils.py
OLD_VERSION/api/: filters.py  organizations_api.py  people_api.py
OLD_VERSION/api/models/: accounts.py  addresses.py  attachments.py  calendars.py  contacts.py  enums.py  organizations.py  people.py  request_templates.py  sites.py  ui_extensions.py
py4me/: enums.py  py4me.py  serialization.py
py4me/_api/: py4me_api.py
py4me/account/: models.py
py4me/auth/: auth.py
py4me/organizations/: models.py  organizations_api.py
py4me/other_models/: address.py  custom_field.py
py4me/people/: models.py  people_api.py
py4me/requests/: models.py  requests_api.py
src/py4me/: enums.py  exceptions.py  filters.py  py4me.py  serialization.py
src/py4me/_api/: py4me_api.py
src/py4me/account/: models.py
src/py4me/auth/: __init__.py
src/py4me/organizations/: models.py
src/py4me/other_models/: address.py  custom_field.py
src/py4me/people/: models.py  people_api.py
tests/: manual_tests.py  test_enums.py  test_filters.py  tests_organizations.py  tests_py4me.py  tests_py4me_api.py  tests_requests.py  tests_serialization.py
