[build-system]
requires = [
    "setuptools >= 61.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "py4me"
version = "alpha.0.1.0"
description = "Python library for the 4me API (https://developer.4me.com/)"
requires-python = ">=3.6"
license = {text = "MIT License"}

authors = [
    {name = "Patryk Szczepański", email = ""}
]

dependencies = [
    "requests ~= 2.32.3"
]


classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[project.urls]
Homepage = "https://github.com/rodo7936/py4me"
Repository = "https://github.com/rodo7936/py4me"
Issues = "https://github.com/rodo7936/py4me/issues"
